# redis-llm

./: CMakeLists.txt  Chinese.md  README.md
docker/: Dockerfile  create-search-app.sh  load-embeddings.sh
examples/search-application/: README.md  create-search-app.sh
src/sw/redis-llm/: add_command.cpp  add_command.h  application.cpp  application.h  ask_command.cpp  ask_command.h  azure_openai.cpp  azure_openai.h  chat_application.cpp  chat_application.h  chat_history.cpp  chat_history.h  command.cpp  command.h  commands.cpp  commands.h  create_app_command.cpp  create_app_command.h  create_chat_command.cpp  create_chat_command.h  create_command.cpp  create_command.h  create_llm_command.cpp  create_llm_command.h  create_search_command.cpp  create_search_command.h  create_vector_store_command.cpp  create_vector_store_command.h  embedding_model.cpp  embedding_model.h  errors.h  get_command.cpp  get_command.h  hnsw.cpp  hnsw.h  http_client.cpp  http_client.h  knn_command.cpp  knn_command.h  llama_cpp.cpp  (+36 more)
